cluster/apps/tools/vault/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID_1}.cfargotunnel.com"
  name: vault
  namespace: tools
spec:
  ingressClassName: traefik
  rules:
    - host: "vault.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: vault
                port:
                  number: 8200
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - "vault.${SECRET_DOMAIN}"
